--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pixel-Effect</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <nav>
+        <ul>
+            <!-- <li><a href="#">Home</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Upload</a></li>
+            <li><a href="#">Contact</a></li> -->
+        </ul>
+    </nav>
+    
     <h1>Upload an Image</h1>
     <input type="file" id="fileInput" accept="image/*" />
     <canvas id="canva" width="640" height="398" style="border: 1px solid black;"></canvas>
